@@ -24,20 +24,6 @@ name|apache
 operator|.
 name|lucene
 operator|.
-name|index
-operator|.
-name|IndexableField
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
 name|store
 operator|.
 name|AlreadyClosedException
@@ -270,37 +256,19 @@ return|return
 literal|0
 return|;
 block|}
-comment|/**    * Just like {@link #getPositionIncrementGap}, except for    * Token offsets instead.  By default this returns 1 for    * tokenized fields and, as if the fields were joined    * with an extra space character, and 0 for un-tokenized    * fields.  This method is only called if the field    * produced at least one token for indexing.    *    * @param field the field just indexed    * @return offset gap, added to the next token emitted from {@link #tokenStream(String,Reader)}    */
+comment|/**    * Just like {@link #getPositionIncrementGap}, except for    * Token offsets instead.  By default this returns 1.    * This method is only called if the field    * produced at least one token for indexing.    *    * @param fieldName the field just indexed    * @return offset gap, added to the next token emitted from {@link #tokenStream(String,Reader)}    */
 DECL|method|getOffsetGap
 specifier|public
 name|int
 name|getOffsetGap
 parameter_list|(
-name|IndexableField
-name|field
+name|String
+name|fieldName
 parameter_list|)
-block|{
-if|if
-condition|(
-name|field
-operator|.
-name|fieldType
-argument_list|()
-operator|.
-name|tokenized
-argument_list|()
-condition|)
 block|{
 return|return
 literal|1
 return|;
-block|}
-else|else
-block|{
-return|return
-literal|0
-return|;
-block|}
 block|}
 comment|/** Frees persistent resources used by this Analyzer */
 DECL|method|close
