@@ -312,6 +312,21 @@ operator|&&
 name|doInvert
 condition|)
 block|{
+specifier|final
+name|boolean
+name|analyzed
+init|=
+name|fieldType
+operator|.
+name|tokenized
+argument_list|()
+operator|&&
+name|docState
+operator|.
+name|analyzer
+operator|!=
+literal|null
+decl_stmt|;
 comment|// if the field omits norms, the boost cannot be indexed.
 if|if
 condition|(
@@ -374,14 +389,8 @@ name|fieldState
 operator|.
 name|position
 operator|+=
-name|docState
-operator|.
-name|analyzer
-operator|==
-literal|null
+name|analyzed
 condition|?
-literal|0
-else|:
 name|docState
 operator|.
 name|analyzer
@@ -392,6 +401,8 @@ name|fieldInfo
 operator|.
 name|name
 argument_list|)
+else|:
+literal|0
 expr_stmt|;
 block|}
 specifier|final
@@ -789,22 +800,20 @@ name|fieldState
 operator|.
 name|offset
 operator|+=
-name|docState
-operator|.
-name|analyzer
-operator|==
-literal|null
+name|analyzed
 condition|?
-literal|0
-else|:
 name|docState
 operator|.
 name|analyzer
 operator|.
 name|getOffsetGap
 argument_list|(
-name|field
+name|fieldInfo
+operator|.
+name|name
 argument_list|)
+else|:
+literal|0
 expr_stmt|;
 name|fieldState
 operator|.
